# ChangeLog for app-shells/bash
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/bash/ChangeLog,v 1.218 2009/05/29 23:07:58 vapier Exp $

  29 May 2009; Mike Frysinger <vapier@gentoo.org> bash-4.0_p24.ebuild,
  +files/bash-4.0-parallel-build.patch:
  Add dependency fix by Peter Alfredsen for parallel builds #267613.

*bash-4.0_p24 (17 May 2009)

  17 May 2009; Mike Frysinger <vapier@gentoo.org> +bash-4.0_p24.ebuild:
  Version bump #270169 by Lars Wendler and fix parallel build #267613 by
  Peter Alfredsen.

*bash-4.0_p17-r1 (14 Apr 2009)

  14 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-debug-trap-jobs.patch,
  +files/bash-4.0-redisplay-sigwinch.patch, +bash-4.0_p17-r1.ebuild:
  Add some fixes from upstream.

*bash-4.0_p17 (08 Apr 2009)

  08 Apr 2009; Mike Frysinger <vapier@gentoo.org> +bash-4.0_p17.ebuild:
  Version bump.

  23 Mar 2009; Fabian Groffen <grobian@gentoo.org> bash-3.1_p17.ebuild,
  bash-3.2_p39.ebuild, bash-3.2_p48.ebuild, bash-3.2_p48-r1.ebuild,
  bash-4.0_p10.ebuild, bash-4.0_p10-r1.ebuild:
  Add dependency on virtual/libintl for USE=nls, bug #261118

*bash-4.0_p10-r1 (14 Mar 2009)

  14 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-amp-case-segv.patch, +files/bash-4.0-bar-and-piping.patch,
  +bash-4.0_p10-r1.ebuild:
  Add some more patches from upstream bash.

  10 Mar 2009; Doug Goldstein <cardoe@gentoo.org> bash-4.0_p10.ebuild:
  fix licensing issue. bug #262015

*bash-4.0_p10 (10 Mar 2009)

  10 Mar 2009; Mike Frysinger <vapier@gentoo.org> +bash-4.0_p10.ebuild:
  Move to official bash patches and into ~arch #261905 by Lars
  (Polynomial-C).

  03 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-comsub-comments.patch, bash-4.0.ebuild:
  Add fix from upstream for comments in subshelled case statements.

  03 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/bash-4.0-read-timeout-reset.patch, bash-4.0.ebuild: