@@ -124,6 +124,10 @@ DIST bash40-021 1547 RMD160 057becc706b90a5c55d51baa425ee9546e3fa092 SHA1 a1c785
 DIST bash40-022 1592 RMD160 a9c134b260cd4bde1d2c3352b52dcf5e0f333476 SHA1 7060344931a866b07754eb0b9d49039df4132053 SHA256 045a1dc71aa1863f73ad7be00ec4e18ee3c43c20fafe58d9e2c6c51592359012
 DIST bash40-023 2148 RMD160 dbf73ebe9b63aceb61068a9f133a6d4a946af795 SHA1 e6ccdbc145f81209c04541cbfcb6ba561e7fe8ea SHA256 580b522375f762ca5ddf9dedb6431ef4a9b6e887ea25fc0ce152d747ae5ddc86
 DIST bash40-024 3049 RMD160 484c6ef4e0bbe887ecff754db18aa25e62075529 SHA1 3471e683167980dcb297bebe17f34646df560ce6 SHA256 a59ebac47efe31b951e1732e4223cc725b2748c331bec98248355c5ac53717ab
+DIST bash40-025 3435 RMD160 3fd64c752c3e9f32472455247de52fd08bee1182 SHA1 ccd98dbb09f13b240ca95986ec55ae5f43e359b3 SHA256 f77900d636033474bc15d39c4948515fdfe718164ea668edd64d8d4d5a8f6a08
+DIST bash40-026 1433 RMD160 5edce83d4910e1fadc004f0b35b1a84d624a2dfc SHA1 39a9e0233efd5828f92ec7625643557fe628fe06 SHA256 a9bdf4409c6625561884be58026a52ccb47600407f3d5b8d0889f0585040f6cb
+DIST bash40-027 2010 RMD160 99a2ba5a9b13d80039982966f7d18533387f66b1 SHA1 50976ef737ce3c01957a058ef5b496e152ebe7ac SHA256 f65dc26bb1bacc8a66610cd5f6f2b8e70be8d8c4e397e7a5ad6f3306224b77f2
+DIST bash40-028 5567 RMD160 bc99e904e251a1f30a94359afc42ca2225fb4f29 SHA1 bb3d83b79ed357c86bf75fc41eaf06e913e84c10 SHA256 5b222cbaf3ab1c1d9b4c5956a0e28cad49660f5746af08efe174e7b474022d1a
 EBUILD bash-3.2_p39.ebuild 7179 RMD160 8d04fbc27bb3ab3a3229962764d16e8964ee943e SHA1 7f944e79c8c8c78f30b72ccac0b98bec4e5a5605 SHA256 ce1c8f2ba95c779fca2d425c912bbe7618721fbe077fd6644a1b574745cb6c95
 EBUILD bash-3.2_p48-r1.ebuild 7605 RMD160 116e31301f4e709551a427936009b21a6281a31c SHA1 f81e17eea58fd1dd7b53fd15f4df447cc0e4317b SHA256 6fdcfebd63d298257934d288350a5eede88798fd3f8ab0093bf5b5a63f58490f
 EBUILD bash-3.2_p48.ebuild 7203 RMD160 bb4fa68a8a729849b9c86f6323abd0a3eb18fcc5 SHA1 4af6de33d1f286ef83942fe82776fb4f106d9ca7 SHA256 b088e69c3f888f1343b4c39af0d73e4a4279e3e78ecc9c6cc570473f9fbe0424
@@ -132,5 +136,6 @@ EBUILD bash-4.0_p10.ebuild 7907 RMD160 e27a4f080d1e351bba8c9f84a874bdc8dc8749ca 
 EBUILD bash-4.0_p17-r1.ebuild 7474 RMD160 9436966075eed6945c148a8a25429afd306a3280 SHA1 28d58d422417bfa35b95eb8695682d4b8884152e SHA256 8f76ce1691ff21b2d1b41601f0e5046ccd562d511a732b528c6098ba23d3516d
 EBUILD bash-4.0_p17.ebuild 7150 RMD160 9efd06a7e4c01848e9700aec8265860372f96dc2 SHA1 994e16b8a856926bc3f66779a750051b129c646b SHA256 a6db1163913e1c07716e46717b2d4624251458db1aeb645d50f310abc8baf738
 EBUILD bash-4.0_p24.ebuild 7683 RMD160 d142e02da04aaf09c7a99097b3109520bbda38f1 SHA1 82494ec48d4462e6f817f51a5c167bd8c5d745f5 SHA256 40d39d41ad5697c43aba60bfcd3996041981e292bc293e72116112d348b7e93d
-MISC ChangeLog 35666 RMD160 3bd4041549ebe5e77908232335666a5890e45ac3 SHA1 f18d73a387f7958ce737c4b71cbc0dae32ffeef2 SHA256 6f5c05d6fa1c46f42115e87a27a2620c86a02f763a168893baf7d6b48ee85743
+EBUILD bash-4.0_p28.ebuild 7683 RMD160 a3c2b08a98dc3d3d8f41cb5c6be6c8ee9146f398 SHA1 2ae5bc46ae33af9ab863928d06b153152fa94537 SHA256 c87a4cd58432f45ea121ac4b1536e270ea7818226c825f934feb55007071101a
+MISC ChangeLog 35808 RMD160 0ccfac27d5fbf1000ab45da798ea0100cd43358a SHA1 d3332c39c6aee5005250fc5751a59c50a4e6612c SHA256 f81d96969995628df6c5b88ab9c8d583c5b78c34f201c9d5fddd747091379910
 MISC metadata.xml 468 RMD160 9f720f1227381137311440f58d93250f29969786 SHA1 34bdfd1f0ed219ed79850647615a3b2603a4e079 SHA256 152d66c4d8f40627855ad3b4613e0ab88ff4bbf4333542eae52d411bdeb66e5f
